# OpenMes

./: .dockerignore  .env.example  .gitignore  .mailmap  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  HOOKS.md  HOOKS_TR.md  I18N.md  IMPLEMENTATION_STATUS.md  PHASE2_COMPLETE.md  QUICKSTART.md  README.md  README_TR.md  ROADMAP.md  SECURITY.md  TESTING.md  TEST_INSTALLATION.md  check.cjs  check_browser_detailed.js  check_browser_errors.js  check_imports.js  debug_op.js  debug_op2.js  debug_op3.js  docker-compose.dev.yml  docker-compose.dokploy.yml  docker-compose.yml  find_roles.js  fix_view_steps.js  gitUpdate.bat  install.sh  localize_admin.js  localize_admin_lines_show.js  localize_admin_pt.js  localize_admin_pt_show.js  (+26 more)
.githooks/: pre-commit
backend/: .env.example  .gitignore  .openmus_conversation17022026.txt  Dockerfile  composer.json  docker-entrypoint.sh  package-lock.json  package.json  test-op.php  test-start-step.php  test.php  vite.config.js  vitest.config.js
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: API_DOCUMENTATION.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  PHASE2_COMPLETE.md  QUICKSTART.md  TESTING.md  index.md  mqtt-connectivity.md
frontend/: Dockerfile  PWA_TESTING_GUIDE.md  package-lock.json  package.json  vite.config.ts
mobile/: metro.config.js  package-lock.json  package.json  tsconfig.json
nginx/: nginx.conf
(+1531 files in other folders)
