[package]
name = "openmes-desktop"
version = "0.1.1"
description = "OpenMES Desktop — lokalny serwer MES w aplikacji desktopowej"
authors = ["OpenMES"]
edition = "2021"

[lib]
name = "openmes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
